Fix text spacing on flashcards

--- a/app/assets/stylesheets/components/study.scss
+++ b/app/assets/stylesheets/components/study.scss
@@ -60,6 +60,10 @@ z-index: 1000;
   justify-content: center;
 }
 
+.question-text p {
+  line-height: 36px;
+}
+
 .reveal-button {
   height: calc(10vh + 18px);
   width: calc(100% - 48px);
